--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
               "src/assets/styles/style.scss",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/ngx-spinner/animations/timer.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
           },
