--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.0.5",
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/router": "^19.0.5",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@auth0/angular-jwt": "^5.1.2",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "angular-calendar": "^0.31.0",
@@ -31,6 +32,7 @@
     "hammerjs": "^2.0.8",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "mat-table-filter": "^9.0.0",
     "moment": "^2.29.4",
     "ng-apexcharts": "^1.7.6",
@@ -53,6 +55,7 @@
     "@angular/compiler-cli": "^19.0.5",
     "@types/jasmine": "~4.3.0",
     "@types/jwt-decode": "^3.1.0",
+    "@types/leaflet": "^1.9.21",
     "@types/ol": "^7.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
